# edge-tts-mcp

./: .env.example  .gitignore  IMPLEMENTATION.md  INSTALL.md  README.md  pyproject.toml
src/edge_tts_mcp/: __main__.py  audio.py  config.py  server.py  tts.py
src/mcp_edge_tts/: __init__.py
tests/: __init__.py
