[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edge-tts-mcp"
version = "0.1.0"
description = "Minimal cross-platform MCP server for text-to-speech using Microsoft Edge TTS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nikolay", email = "nikolay.savenets@gmail.com" }
]
keywords = ["mcp", "tts", "text-to-speech", "edge-tts", "claude", "claude-code", "claude-desktop", "voice", "speak", "speech", "ai", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Operating System :: OS Independent",
]

dependencies = [
    "mcp>=1.0.0",
    "edge-tts>=6.1.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/s-n-n/edge-tts-mcp"
Repository = "https://github.com/s-n-n/edge-tts-mcp"
Issues = "https://github.com/s-n-n/edge-tts-mcp/issues"

[project.scripts]
edge-tts-mcp = "edge_tts_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/edge_tts_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
